added style to a logged-out component

--- a/frontend/src/assets/i18n/pl.json
+++ b/frontend/src/assets/i18n/pl.json
@@ -12,5 +12,7 @@
   "login.doYouHaveAccount": "Posiadasz już konto?",
   "form.fieldRequired": "To pole jest wymagane",
   "form.invalidEmail": "Nieprawidłowy adres e-mail",
-  "form.passwordsDontMatch": "Hasła nie są identyczne"
+  "form.passwordsDontMatch": "Hasła nie są identyczne",
+  "loggedOut.accountCreated": "Twoje konto zostało utworzone",
+  "loggedOut.loggedOut": "Zostałeś wylogowany"
 }
