Moved components to public

--- a/frontend/src/assets/i18n/pl.json
+++ b/frontend/src/assets/i18n/pl.json
@@ -12,7 +12,9 @@
   "login.doYouHaveAccount": "Posiadasz już konto?",
   "form.fieldRequired": "To pole jest wymagane",
   "form.invalidEmail": "Nieprawidłowy adres e-mail",
+  "form.accountExists": "Istnieje już konto powiązane z podanym adresem e-mail.",
   "form.passwordsDontMatch": "Hasła nie są identyczne",
-  "loggedOut.accountCreated": "Twoje konto zostało utworzone.",
+  "form.invalidData": "Podany login i hasło są nieprawidłowe!",
+  "loggedOut.accountCreated": "Twoje konto zostało utworzone",
   "loggedOut.loggedOut": "Zostałeś wylogowany."
 }
